added some alt text & title for images

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <button type="button">Learn More</button>
             </div>
             <div class="hero-1 hero-image">
-                <img src="images/cervus.png" alt="">
+                <img src="images/cervus.png" alt="cervus, my first ever nft project">
             </div>
         </div>
     </div>
@@ -38,19 +38,19 @@
         <div class="content-info">
             <div>
                 <img src="images/self potrait.png">
-                <p>title 1</p>
+                <p>self potrait</p>
             </div>
             <div>
                 <img src="images/coffee.png">
-                <p>title 2</p>
+                <p>coffee</p>
             </div>
             <div>
                 <img src="images/converse.png">
-                <p>title 3</p>
+                <p>converse</p>
             </div>
             <div>
                 <img src="images/elsi.jpg">
-                <p>title 4</p>
+                <p>my wife</p>
             </div>
         </div>
     </div>
